[package]
name = "sslb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"

[env]
RUST_LOG = "info"
